--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-<html>
-    <head>
-        <title>Home</title>
-    </head>
-        <body>
-            Hello
-        </body>
-            </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Table of Content</h1>
+    <ol>
+        <li><a href="http://vnu.edu.vnu">VNU University</a></li>
+        <li><a href="http://www.hust.edu.vn"HUST</li>
+
+        </ol>
+</body>
+</html>
