--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Table of Content</h1>
     <ol>
-        <li><a href="http://vnu.edu.vnu">VNU University</a></li>
-        <li><a href="http://www.hust.edu.vn"HUST</li>
+        <h2><li><a href="http://vnu.edu.vnu">VNU University</a></li></h2>
+        <li><h2><a href="http://www.hust.edu.vn">HUST</a></h2></li>
 
         </ol>
 </body>
