--- a/bai3.html
+++ b/bai3.html
@@ -26,7 +26,7 @@
 <body>
 <div>
         <div class="Product">
-            <img src='./386850987_1409865572943703_5667499894964191604_n.png'>
+            <img src="./386850987_1409865572943703_5667499894964191604_n.png">
             <div class ="ProductDetails">
                 <span class="ProductName">Do Tien Dat</span>
                 <span class="Productprice">23070262</span>
